# mina

./: .clang-format  .gitignore  CMakeLists.txt  README.md  mina.vcxproj  mina.vcxproj.filters
include/: Ast.hpp  BB.hpp  BasicBlock.hpp  CodeGen.hpp  DebugVisitor.hpp  DisjointSetUnion.hpp  IRVisitor.hpp  Inst.hpp  InstIR.hpp  Lexer.hpp  MIRGen.hpp  MachineIR.hpp  Parser.hpp  RegisterAllocator.hpp  SSA.hpp  Semantic.hpp  Symbol.hpp  Token.hpp  Types.hpp  Visitors.hpp  arena_alloc.hpp  vm.hpp
samples/: tes.txt  tes1.txt  tes10.txt  tes2.txt  tes3.txt  tes4.txt  tes5.txt  tes6.txt  tes7.txt  tes8.txt  tes9.txt
src/: Ast.cpp  BB.cpp  BasicBlock.cpp  CodeGen.cpp  DebugVisitor.cpp  DisjointSetUnion.cpp  IRVisitor.cpp  Inst.cpp  InstIR.cpp  Lexer.cpp  MIRGen.cpp  MachineIR.cpp  Parser.cpp  RegisterAllocator.cpp  SSA.cpp  Symbol.cpp  Token.cpp  Types.cpp  arena_alloc.cpp  main.cpp  vm.cpp
tests/: CMakeLists.txt  tests.cpp
tests/include/tests/: test_lexer.hpp
tests/lib/: test_lexer.cpp
